--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ h1 {
 .aboutUs .content p {
     color: var(--main);
     font-size: 20px;
-    margin: 12px 48px;
+    margin: 12px;
 }
 .arrow {
     border: solid var(--accent);
@@ -603,8 +603,8 @@ br.mobile {
     .popPizza .info {
         width: 100%;
         height: 60vh;
-        background-image: url(images/mars.webp);
-        background-position: center center;
+        background-image: url(images/cheesePizza.webp);
+        background-position: top center;
         background-size: cover;
     }
     /* banner */
